--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "rand-token": "^1.0.1"
   }
 }
